Fix some quirks on IE

--- a/assets/css/master.styl
+++ b/assets/css/master.styl
@@ -185,6 +185,7 @@ section
 
 .innerSection
   margin: auto;
+  width: 100%;
 
 h1
   font-family: $pacifico;
@@ -222,7 +223,6 @@ $bRad = 2px;
   border-bottom: 1px solid rgba(0,0,0,0.2);
 
 .item img
-  width: 315px;
   height: 250px;
 
 .item .text 
